--- a/FrontDoorEU/FrontDoorEU/index.html
+++ b/FrontDoorEU/FrontDoorEU/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>WEBSITE USA</title>
+    <title>WEBSITE UK</title>
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Content/Site.css" rel="stylesheet" />
     <style>
@@ -24,7 +24,7 @@
     <script>
         $(function () {
             $('.carousel').carousel({
-                interval: 2800
+                interval: 3800
             })
         });
     </script>
